# Airflow_practice_ino

./: .env.example  .gitignore  Dockerfile  Readme.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: data_provider.py  mongo_process_dag.py  mongo_process_file_consumer_dag.py
mongo_aggregations/: All entries where the “content” field is less than 5 characters long.json  Average rating for each day (the result should be in timestamp type).json  Top 5 frequently occurring comments.json
